--- a/application.json
+++ b/application.json
@@ -32,6 +32,14 @@
     {
       "id": "Home",
       "isDefault": true
+    },
+    {
+      "id": "AuthPage",
+      "isDefault": false
+    },
+    {
+      "id": "Page1",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
